fixed z-index of footer nav

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -107,6 +107,7 @@ body, html { height: 100%; background: #eee; }
 	text-align: center;
 	font-size: 1.8em;
 	text-shadow: 0 2px 2px rgba(0,0,0,0.5);
+	z-index: 1;
 }
 	
 /* Misc */
